--- a/estilos/videos-styles.css
+++ b/estilos/videos-styles.css
@@ -32,6 +32,7 @@ body {
     border: 2px solid var(--color-highlight);
     overflow: hidden;
     width: 100%;
+    margin-left: 25px;
 }
 
 .sidebar {
